lab1/Test/L1-A-10-17.output
Error Type B at Line 11
Error Type A at Line 12
Error Type A at Line 14
Error Type A at Line 40
Error Type A at Line 41
Error Type A at Line 53
